<resources>
    <string name="app_name">Spektra</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">About</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_mypalettes">My Palettes</string>
    <string name="menu_publicpalettes">Public Palettes</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_cardpalettes">Card Palettes</string>
    <string name="menu_rate">Rate Spektra</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_log_out">Log out</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_google">Se connecter</string>
    <string name="action_sign_in_facebook">Continuer avec Facebook</string>
    <string name="action_sign_up">Not Account Yet? Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="menu_bytitle">By Title</string>
    <string name="menu_byhearts">By Hearts Count</string>
    <string name="menu_bydate">By Date</string>

    <string name="ajout_palette_name">Palette Name</string>
    <string name="ajout_palette_tags">Tags</string>
    <string name="ajout_palette_private">Private</string>
    <string name="ajout_palette_generate">Generate Colors</string>

    <string name="login_name">Username</string>
    <string name="login_mdp">Password</string>
    <string name="repeat_login_mdp">Repeat Password</string>
    <string name="cancel_sign_Up">Already have an account ?</string>
    <string name="validata_signUp">Create Account</string>

    <string-array name="color_mode_array">
        <item>HEX</item>
        <item>RGB</item>
        <item>HSV</item>

    </string-array>


</resources>
