<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mypalettes"
            android:icon="@drawable/home"
            android:title="@string/menu_mypalettes" />
        <item
            android:id="@+id/nav_publicpalettes"
            android:icon="@drawable/earth"
            android:title="@string/menu_publicpalettes" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/heart_outline"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_cardpalettes"
            android:icon="@drawable/credit_card_outline"
            android:title="@string/menu_cardpalettes" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/star"
                android:title="@string/menu_rate" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/logout"
                android:title="@string/menu_log_out" />
        </menu>
    </item>

</menu>
