<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ajout_palette">

    <ListView
        android:id="@+id/mListView_palette"
        android:layout_width="368dp"
        android:layout_height="485dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajout_palette_switch" />

    <Switch
        android:id="@+id/ajout_palette_switch"
        android:layout_width="136dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ajout_palette_private"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajout_palette_tags" />

    <EditText
        android:id="@+id/ajout_palete_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:imeOptions="actionDone"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/ajout_palette_name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ajout_palette_tags"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:imeOptions="actionDone"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/ajout_palette_tags"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajout_palete_name" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/validate_button"
        android:layout_width="58dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/checkbox_on_background" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bouton_generate_ajout_palette"
        android:layout_width="219dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_color_lens_black_48dp" />
</androidx.constraintlayout.widget.ConstraintLayout>